--- a/contactus.html
+++ b/contactus.html
@@ -9,9 +9,9 @@
 
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="style.css">
-        <script src="./index.js"></script>
        
-        <title>Your Cart</title>
+       
+        <title>Contac Us</title>
     </head>
     <body>
 
