--- a/shopnow.html
+++ b/shopnow.html
@@ -9,7 +9,7 @@
 
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="style.css">
-        <script src="./index.js"></script>
+        
 
         <title>Shop Now</title>
     </head>
@@ -33,7 +33,7 @@
                         <li class="nav__item"><a href="#services" class="nav__link">Categories</a></li>
                         <li class="nav__item"><a href="#menu" class="nav__link">New</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
-                        <li class="nav__item"><a href="./YourCart.html" class="nav__link" target="_blank"><i class='bx bx-cart-alt'></i></a></li>
+                        <li class="nav__item"><a href="#" class="nav__link" target="_blank"><i class='bx bx-cart-alt'></i></a></li>
 
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
